@@ -1,6 +1,6 @@
 # Define some default values that can be overridden by system properties
 hive.root.logger=DEBUG,DRFA
-hive.log.dir=${user.dir}/../build/ql/tmp/
+hive.log.dir=${build.dir.hive}/ql/tmp/
 hive.log.file=hive.log
 
 # Define the root logger to the system property "hadoop.root.logger".
