@@ -55,7 +55,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
 import|;
 end_import
 
@@ -222,6 +242,32 @@ name|long
 name|serialVersionUID
 init|=
 literal|1L
+decl_stmt|;
+specifier|final
+specifier|static
+name|String
+name|hadoopMemKey
+init|=
+literal|"HADOOP_HEAPSIZE"
+decl_stmt|;
+specifier|final
+specifier|static
+name|String
+name|hadoopOptsKey
+init|=
+literal|"HADOOP_OPTS"
+decl_stmt|;
+specifier|final
+specifier|static
+name|String
+name|HIVE_SYS_PROP
+index|[]
+init|=
+block|{
+literal|"build.dir"
+block|,
+literal|"build.dir.hive"
+block|}
 decl_stmt|;
 specifier|public
 name|MapRedTask
@@ -594,6 +640,113 @@ name|executor
 init|=
 literal|null
 decl_stmt|;
+comment|// Inherit Java system variables
+name|String
+name|hadoopOpts
+decl_stmt|;
+block|{
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+name|Properties
+name|p
+init|=
+name|System
+operator|.
+name|getProperties
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|k
+init|=
+literal|0
+init|;
+name|k
+operator|<
+name|HIVE_SYS_PROP
+operator|.
+name|length
+condition|;
+name|k
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|p
+operator|.
+name|containsKey
+argument_list|(
+name|HIVE_SYS_PROP
+index|[
+name|k
+index|]
+argument_list|)
+condition|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|" -D"
+operator|+
+name|HIVE_SYS_PROP
+index|[
+name|k
+index|]
+operator|+
+literal|"="
+operator|+
+name|p
+operator|.
+name|getProperty
+argument_list|(
+name|HIVE_SYS_PROP
+index|[
+name|k
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|hadoopOpts
+operator|=
+name|sb
+operator|.
+name|toString
+argument_list|()
+expr_stmt|;
+block|}
+comment|// Inherit the environment variables
+name|String
+index|[]
+name|env
+decl_stmt|;
+block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|variables
+init|=
+operator|new
+name|HashMap
+argument_list|(
+name|System
+operator|.
+name|getenv
+argument_list|()
+argument_list|)
+decl_stmt|;
 comment|// The user can specify the hadoop memory
 name|int
 name|hadoopMem
@@ -615,38 +768,74 @@ name|hadoopMem
 operator|==
 literal|0
 condition|)
-name|executor
-operator|=
-name|Runtime
+block|{
+name|variables
 operator|.
-name|getRuntime
-argument_list|()
-operator|.
-name|exec
+name|remove
 argument_list|(
-name|cmdLine
+name|hadoopMemKey
 argument_list|)
 expr_stmt|;
-comment|// user specified the memory - only applicable for local mode
+block|}
 else|else
 block|{
-name|Map
-argument_list|<
-name|String
+comment|// user specified the memory - only applicable for local mode
+name|variables
+operator|.
+name|put
+argument_list|(
+name|hadoopMemKey
 argument_list|,
 name|String
-argument_list|>
-name|variables
-init|=
-name|System
 operator|.
-name|getenv
-argument_list|()
-decl_stmt|;
-name|String
-index|[]
+name|valueOf
+argument_list|(
+name|hadoopMem
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|variables
+operator|.
+name|containsKey
+argument_list|(
+name|hadoopOptsKey
+argument_list|)
+condition|)
+block|{
+name|variables
+operator|.
+name|put
+argument_list|(
+name|hadoopOptsKey
+argument_list|,
+name|variables
+operator|.
+name|get
+argument_list|(
+name|hadoopOptsKey
+argument_list|)
+operator|+
+name|hadoopOpts
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|variables
+operator|.
+name|put
+argument_list|(
+name|hadoopOptsKey
+argument_list|,
+name|hadoopOpts
+argument_list|)
+expr_stmt|;
+block|}
 name|env
-init|=
+operator|=
 operator|new
 name|String
 index|[
@@ -654,10 +843,8 @@ name|variables
 operator|.
 name|size
 argument_list|()
-operator|+
-literal|1
 index|]
-decl_stmt|;
+expr_stmt|;
 name|int
 name|pos
 init|=
@@ -710,19 +897,8 @@ operator|+
 name|value
 expr_stmt|;
 block|}
-name|env
-index|[
-name|pos
-index|]
-operator|=
-operator|new
-name|String
-argument_list|(
-literal|"HADOOP_HEAPSIZE="
-operator|+
-name|hadoopMem
-argument_list|)
-expr_stmt|;
+block|}
+comment|// Run ExecDriver in another JVM
 name|executor
 operator|=
 name|Runtime
@@ -737,7 +913,6 @@ argument_list|,
 name|env
 argument_list|)
 expr_stmt|;
-block|}
 name|StreamPrinter
 name|outPrinter
 init|=
