@@ -295,6 +295,24 @@ name|hadoop
 operator|.
 name|hive
 operator|.
+name|conf
+operator|.
+name|HiveConf
+operator|.
+name|ConfVars
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
 name|metastore
 operator|.
 name|MetaStoreUtils
@@ -710,10 +728,8 @@ name|System
 operator|.
 name|getProperty
 argument_list|(
-literal|"user.dir"
+literal|"test.tmp.dir"
 argument_list|)
-operator|+
-literal|"/../build/ql/tmp"
 decl_stmt|;
 specifier|private
 name|Path
@@ -4936,99 +4952,40 @@ name|cmdArray
 operator|=
 operator|new
 name|String
-index|[
-literal|14
-index|]
-expr_stmt|;
-name|cmdArray
-index|[
-literal|0
-index|]
-operator|=
+index|[]
+block|{
 literal|"diff"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|1
-index|]
-operator|=
+block|,
 literal|"-a"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|2
-index|]
-operator|=
+block|,
 literal|"-I"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|3
-index|]
-operator|=
-literal|"\\(file:\\)\\|\\(/tmp/.*\\)"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|4
-index|]
-operator|=
+block|,
+literal|"file:"
+block|,
 literal|"-I"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|5
-index|]
-operator|=
+block|,
+literal|"/tmp/"
+block|,
+literal|"-I"
+block|,
+literal|"invalidscheme:"
+block|,
+literal|"-I"
+block|,
 literal|"lastUpdateTime"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|6
-index|]
-operator|=
+block|,
 literal|"-I"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|7
-index|]
-operator|=
+block|,
 literal|"lastAccessTime"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|8
-index|]
-operator|=
+block|,
 literal|"-I"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|9
-index|]
-operator|=
+block|,
 literal|"owner"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|10
-index|]
-operator|=
+block|,
 literal|"-I"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|11
-index|]
-operator|=
+block|,
 literal|"transient_lastDdlTime"
-expr_stmt|;
-name|cmdArray
-index|[
-literal|12
-index|]
-operator|=
+block|,
 operator|(
 operator|new
 name|File
@@ -5043,12 +5000,7 @@ operator|)
 operator|.
 name|getPath
 argument_list|()
-expr_stmt|;
-name|cmdArray
-index|[
-literal|13
-index|]
-operator|=
+block|,
 operator|(
 operator|new
 name|File
@@ -5063,6 +5015,7 @@ operator|)
 operator|.
 name|getPath
 argument_list|()
+block|}
 expr_stmt|;
 name|System
 operator|.
@@ -5070,101 +5023,22 @@ name|out
 operator|.
 name|println
 argument_list|(
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|lang
+operator|.
+name|StringUtils
+operator|.
+name|join
+argument_list|(
 name|cmdArray
-index|[
-literal|0
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|1
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|2
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|3
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|4
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|5
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|6
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|7
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|8
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|9
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|10
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|11
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|12
-index|]
-operator|+
-literal|" "
-operator|+
-name|cmdArray
-index|[
-literal|13
-index|]
+argument_list|,
+literal|' '
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|Process
