@@ -24,6 +24,9 @@ Trunk -  Unreleased
     HIVE-1045. (bigint % int) should return bigint instead of double.
     (Paul Yang via zshao)
 
+    HIVE-1046. Pass build.dir.hive and other properties to subant
+    (Zheng Shao via namit)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
